--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <display-name>BiblioTec</display-name>
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>gestaoBibliotecas.xhtml</welcome-file>
     </welcome-file-list>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
